# double_ml_time_series

./: .buildinfo  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  ASSUMPTIONS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  STYLE.md  bibliography.bib  genindex.html  index.html  main.bbl  main.tex  objects.inv  py-modindex.html  pyproject.toml  requirements-docs.txt  requirements.txt  search.html  searchindex.js
.claude/: settings.json
.claude/commands/: build-latex.md  chapter-status.md  validate-dml.md
.doctrees/: index.doctree
.doctrees/api/: data.doctree  dml.doctree  production.doctree  sensitivity.doctree  validation.doctree
.doctrees/examples/: index.doctree
.doctrees/getting_started/: installation.doctree  quickstart.doctree
.doctrees/user_guide/: fwl_to_dml.doctree  production_pipeline.doctree  time_series_dml.doctree
.github/workflows/: book.yml  deploy-web.yml  docs.yml  nightly.yml  tests.yml
_modules/: index.html
_sources/: index.rst
_sources/api/: data.rst  dml.rst  production.rst  sensitivity.rst  validation.rst
_sources/examples/: index.rst
_sources/getting_started/: installation.rst  quickstart.rst
_sources/user_guide/: fwl_to_dml.rst  production_pipeline.rst  time_series_dml.rst
_static/: documentation_options.js
api/: data.html  dml.html  production.html  sensitivity.html  validation.html
chapters/: 02_orthogonality_dml.adoc  appendix_a.tex  bibliography.bib  chapter_01.adoc  chapter_01.tex  chapter_02.tex  chapter_03.tex  chapter_04.tex  chapter_05.tex  chapter_06.tex  chapter_07.tex  chapter_08.tex  chapter_09.tex  chapter_10.tex  chapter_template.tex  test_chapter.adoc
chapters/archive_asciidoc/: 02_orthogonality_dml.adoc  chapter_01.adoc
dml_ts/: __init__.py
dml_ts/data/: __init__.py  fred_loader.py  oj_loader.py
dml_ts/dml/: __init__.py  _dynamic_econml.py  _results.py  _utils.py  cross_fitting.py  cv_factory.py  double_ml.py  dynamic_g_estimation.py  fwl.py  hac.py  inference.py  robinson.py  temporal_plr_dml.py
dml_ts/production/: __init__.py  causal_monitor.py  dml_pipeline.py  model_registry.py  retrain_pipeline.py
dml_ts/sensitivity/: rosenbaum.py
dml_ts/validation/: __init__.py  baseline_comparison.py  bias_validation.py  bootstrap_config.py  bootstrap_diagnostics.py  dgp_generator.py  dgp_generator_ts.py  dynamic_dgp.py  empirical_replication.py  enhanced_dgp.py  insurance_dgp.py  ipw_baseline.py  lasso_diagnostic.py  ml_baseline.py  ols_baseline.py  parallel.py  plotting.py  stationarity.py  storage.py  validation_result.py
docs/: ACTION_PLAN_2025-11-14.md  CRITIQUE_RESPONSE_AND_REMEDIATION.md  CURRENT_STATUS.md  CURRENT_WORK.md  DATA_STRATEGY_REPORT.md  DEV_VALIDATION_AUDIT.md  EXPANSION_OPPORTUNITIES.md  HUB_RELATIONSHIP.md  IMPACT_ASSESSMENT_MATRIX_2025-11-21.md  IMPLEMENTATION_STRATEGY_REPORT.md  MASTER_ROADMAP_2025-11-21.md  METHODOLOGICAL_ANALYSIS_2025-11-15.md  PEDAGOGICAL_CONCEPT_GUIDE.md  PHASE_1_COMPLETION_SUMMARY.md  PROJECT_STATUS_2025-11-15.md  SESSION_2025-11-14_MULTIPLE_TESTING_FIX.md  SESSION_2025-11-15_LASSO_DIAGNOSTIC_COMPLETE.md  SESSION_2025-11-15_TASK12_IMPLEMENTATION.md  SESSION_2025-11-15_TASK15_IMPLEMENTATION.md  SKEPTICAL_CRITIQUE_2026-01-08.md  VALIDATION_FIXES_DECISION_2025-11-21.md  VALIDATION_IMPLEMENTATION_GUIDE.md  VALIDATION_LIMITATIONS.md  VALIDATION_REPORT.md  interactive_demos_strategy.md  patterns_hub
docs/audits/: 2026-05-02_repo_quality_methodology_audit.md  2026-05-30_repo_quality_methodology_audit.md  README.md
docs/research/: README.md  bib_ledger.yml  bibliography_audit.md  bibliography_overlap.md  books_to_acquire.md  cross_stage_log.md  dataset_ledger.yml  existing_content_urls.txt  research_plan.md  url_check_report.md
docs/sphinx/: Makefile  conf.py  index.rst
examples/: example_dynamic_g_estimation.py  example_fwl_to_dml.py  example_insurance_dgp.py  example_panel_dml.py  example_production_pipeline.py  example_rolling_window_dml.py  example_sensitivity.py  example_time_series_dml.py  index.html
getting_started/: installation.html  quickstart.html
notebooks/: example_validation.ipynb  method1_bias_validation_results.ipynb
results/impact_analysis/: issue_c2_impact_20251121_173022.csv  issue_c3_impact_20251121_193852.csv  issue_c5_impact_20251121_210521.csv
results/lasso_diagnostic/: diagnostic_results_20251115_173129.txt
results/method_comparison/: configuration_performance.csv  configuration_summaries.csv  findings.json  method_comparison_detailed.csv  method_summary_statistics.csv
results/simulations/: BIAS_VALIDATION_metadata_20251114_103701.json  BIAS_VALIDATION_results_20251114_103701.csv
scripts/: bias_validation_simulation.py  build_chapter_pdf.sh  check_tex_mdx_drift.py  clean_pandoc_output.py  comprehensive_coverage_test.py  comprehensive_method_comparison.py  convert_code_blocks.py  fix_latex_unicode.py  fix_unicode_latex.py  mc_panel_dml_table.py  run_401k_replication.py  run_lasso_diagnostic.py  test_issue_c2_binary_treatment.py  test_issue_c3_monte_carlo_comparability.py  test_issue_c5_401k_covariates.py  verify_coverage_fix.py  verify_environment.py
scripts/documents/: notebook_to_latex.py
shared/: dml-preamble-tufte.sty
src/: __init__.py
src/data/: __init__.py  fred_loader.py  oj_loader.py
src/dml/: __init__.py  cross_fitting.py  double_ml.py  dynamic_dml.py  fwl.py  hac.py  robinson.py  temporal_plr_dml.py
src/production/: __init__.py  causal_monitor.py  dml_pipeline.py  model_registry.py  retrain_pipeline.py
src/sensitivity/: __init__.py  rosenbaum.py
src/validation/: __init__.py  baseline_comparison.py  bias_validation.py  bootstrap_config.py  bootstrap_diagnostics.py  (+13 more)
templates/: simulation_template.py  test_harness_template.py  validation_method_template.py
test/: README.md  conftest.py  test_tier_enforcement.py  test_version.py
user_guide/: fwl_to_dml.html  production_pipeline.html  time_series_dml.html
web/: .env  CLAUDE.md  README.md  UPSTREAM_ISSUES.md  astro.config.mjs  package-lock.json  package.json  wrangler.jsonc  wrangler.toml
(+186 files in other folders)
