[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "double_ml_time_series"
version = "0.1.0"
description = "Volume 2: Double Machine Learning for Time Series Causal Inference"
authors = [{name = "Brandon Behring"}]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
keywords = ["causal-inference", "double-machine-learning", "time-series", "econometrics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
    "joblib>=1.3",
    "tqdm>=4.65",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "pytest-timeout>=2.2", "black>=23.11", "mypy>=1.7", "pre-commit>=3.5"]
fred = ["fredapi>=0.5"]
full = ["econml>=0.15", "doubleml>=0.7", "xgboost>=2.0", "lightgbm>=4.0", "linearmodels>=5.0"]

[project.urls]
Repository = "https://github.com/brandon-behring/double_ml_time_series"
Documentation = "https://brandon-behring.github.io/double_ml_time_series/"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-dir]
"" = "."

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
exclude = [
    "test/",
    "tests/",
]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=term-missing --cov-report=html -v"
# Don't collect tests from src directory (test_stationarity function is not a test)
norecursedirs = ["src", ".git", "venv", "__pycache__"]
markers = [
    "tier1: Unit tests - no estimation, <100ms each, pure logic",
    "tier2: Integration - light estimation, multi-component, <60s each",
    "tier3: Validation - moderate MC/bootstrap, statistical properties, <5min each",
    "tier4: Full replication + stress - full MC, published results, <30min each",
    "network: requires network access (deselect with '-m not network')",
]
timeout = 120

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
fail_under = 30
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
