[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dml_ts"
version = "1.0.0"
description = "Book companion code for Double Machine Learning with temporal PLR examples"
authors = [{name = "Brandon Behring"}]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
keywords = ["causal-inference", "double-machine-learning", "time-series", "econometrics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
    "joblib>=1.3",
    "tqdm>=4.65",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    # Universal time-series toolkit (Track B migration target). Git pin until
    # temporalcv publishes to PyPI; pinned to the v2.0.0 release tag.
    "temporalcv @ git+https://github.com/brandon-behring/temporalcv@v2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-timeout>=2.2",
    "ruff==0.15.16",
    "mypy==2.1.0",
    "pre-commit>=3.5",
]
docs = [
    "sphinx>=7.0",
    "sphinx-book-theme>=1.1",
    "sphinx-autodoc-typehints>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-autobuild>=2024.0",
    "sphinx-design>=0.5",
]
fred = ["fredapi>=0.5"]
full = ["econml>=0.15", "doubleml>=0.7", "xgboost>=2.0", "lightgbm>=4.0", "linearmodels>=5.0"]

[project.urls]
Repository = "https://github.com/brandon-behring/double_ml_time_series"
Documentation = "https://brandon-behring.github.io/double_ml_time_series/"

[tool.setuptools.packages.find]
where = ["."]
include = ["dml_ts*"]

[tool.setuptools.package-dir]
"" = "."

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["venv", "_build", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501", # line too long (handled by the formatter)
    "B905", # zip-without-explicit-strict (adding strict= is a behavior change)
]

[tool.ruff.lint.per-file-ignores]
# __init__.py imports are deliberate re-exports
"**/__init__.py" = ["F401"]
# Examples keep unused vars / late imports for pedagogical clarity
"examples/**" = ["F841", "B007", "E402"]
# Test fixtures commonly bind unused values for documentation
"test/**" = ["F841"]

[tool.ruff.lint.isort]
known-first-party = ["dml_ts"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
exclude = [
    "test/",
    "tests/",
]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"
# Don't collect tests from the package directory (test_stationarity is not a test)
norecursedirs = ["dml_ts", ".git", "venv", "__pycache__"]
markers = [
    "tier1: Unit tests - no estimation, <100ms each, pure logic",
    "tier2: Integration - light estimation, multi-component, <60s each",
    "tier3: Validation - moderate MC/bootstrap, statistical properties, <5min each",
    "tier4: Full replication + stress - full MC, published results, <30min each",
    "network: requires network access (deselect with '-m not network')",
]
# NOTE: Per-tier timeouts enforced in test/conftest.py via pytest_collection_modifyitems.
# Do NOT set a global timeout here — it conflicts with tier3 (300s) and tier4 (1800s).

[tool.coverage.run]
source = ["dml_ts"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
